# jose_moraes_embarcatech_HBr_2025

./: .gitignore  .gitmodules  LICENSE  README.md  _config.yml  index.md
projetos/contador_decrescente/: CMakeLists.txt  README.md  contador_decrescente.md
projetos/contador_decrescente/src/: contador_decrescente.c
projetos/contador_decrescente/src/lib/: button_handler.c  button_handler.h  screen_handler.c  screen_handler.h  timer_handler.c  timer_handler.h
projetos/estrutura_codigo/: CMakeLists.txt  README.md  estrutura_codigo.md
projetos/estrutura_codigo/app/: estrutura_codigo.c
projetos/estrutura_codigo/drivers/: led_embutido.c
projetos/estrutura_codigo/hal/: hal_led.c
projetos/estrutura_codigo/include/: hal_led.h  led_embutido.h
projetos/freertos-pico/: CMakeLists.txt
projetos/freertos-pico/src/app/: CMakeLists.txt  freertos-pico.c
projetos/freertos-pico/src/include/: FreeRTOSConfig.h
projetos/galton_board/: CMakeLists.txt  README.md  galton_board.md  pico_sdk_import.cmake
projetos/galton_board/src/: galton_board.c
projetos/galton_board/src/app/: CMakeLists.txt  board.c  board.h  galton_board.c  hist.c  hist.h
projetos/galton_board/src/drivers/: CMakeLists.txt  cp437.c  cp437.h  ssd1306_i2c.c
projetos/galton_board/src/hal/: CMakeLists.txt  button_handler.c  button_handler.h  screen_handler.c  screen_handler.h
projetos/leitor_temperatura/: CMakeLists.txt  README.md  leitor_temperatura.md
projetos/leitor_temperatura/src/: leitor_temperatura.c
projetos/leitura_joystick/: CMakeLists.txt  README.md  leitura_joystick.md
projetos/leitura_joystick/src/: leitura_joystick.c
projetos/leitura_joystick/src/lib/: joystick_handler.c  joystick_handler.h
projetos/mqtt/: CMakeLists.txt  README.md  mqtt.md
projetos/mqtt/src/app/: CMakeLists.txt  mensagem.c  settings.h
projetos/mqtt/src/drivers/: CMakeLists.txt  wifi.c  wifi.h
projetos/mqtt/src/hal/: CMakeLists.txt  lwipopts.h  mqtt.c  mqtt.h
projetos/pomodoro_timer/: CMakeLists.txt  README.md  pomodoro.md
projetos/robo-equilibrista/: CMakeLists.txt  flake.nix  justfile
projetos/robo-equilibrista/src/app/: CMakeLists.txt  robo_equilibrista.c
projetos/robo-equilibrista/src/drivers/: CMakeLists.txt  mpu6050_i2c.c  mpu6050_i2c.h
projetos/sintetizador/: CMakeLists.txt  justfile
projetos/sintetizador/src/app/: CMakeLists.txt  sintetizador.c
projetos/sintetizador/src/drivers/: CMakeLists.txt  ssd1306.c  ssd1306.h
projetos/sintetizador/src/hal/: CMakeLists.txt  button_handler.c  button_handler.h  buzzer_handler.c  buzzer_handler.h  led_handler.c  led_handler.h  mic_handler.c  mic_handler.h  screen_handler.c  screen_handler.h
projetos/teste_unitario/: CMakeLists.txt  README.md  teste_unitario.md
projetos/teste_unitario/app/: teste_unitario.c
projetos/teste_unitario/hal/: leitor_temperatura.c
projetos/teste_unitario/include/: leitor_temperatura.h
projetos/teste_unitario/src/app/: CMakeLists.txt  teste_unitario.c
projetos/teste_unitario/src/hal/: CMakeLists.txt  leitor_temperatura.c  leitor_temperatura.h
projetos/teste_unitario/src/test/: CMakeLists.txt  tests.c
